# - Почти доделал сообщения!
Надо разобраться....

--- a/src/mygpsx/ListCellUserMsg.fxml
+++ b/src/mygpsx/ListCellUserMsg.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellUserMsgController">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#OnMouseClicked" prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CUserCellMsg">
    <children>
       <Label layoutX="-6.0" layoutY="-3.0" prefHeight="14.0" prefWidth="161.0" text="НАЗВАНИЕ СУДНА:" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="lbMyNameShip" layoutX="-11.0" layoutY="20.0" prefHeight="15.0" prefWidth="180.0" text="Label" textAlignment="CENTER" textFill="#0a43ee" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
@@ -16,6 +16,6 @@
       <Label layoutX="-6.0" layoutY="27.0" text="КАПИТАН СУДНА(ФИО):" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
       <Label fx:id="lbMyDirectorShip" layoutX="-11.0" layoutY="43.0" prefHeight="15.0" prefWidth="180.0" text="Label" textFill="#ed160c" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0" />
       <Label fx:id="fxLbUniqueID" layoutX="125.0" prefHeight="17.0" prefWidth="120.0" text="Label" />
-      <Label alignment="CENTER" prefWidth="100.0" style="-fx-background-color: #cc3333;" text="НОВОЕ" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="fxLbAlarmNewMsg" alignment="CENTER" prefWidth="100.0" style="-fx-background-color: #cc3333;" text="НОВОЕ" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
