--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -18,17 +18,23 @@
 			   <AnchorPane prefHeight="200.0" prefWidth="200.0">
    <children>
                      <GoogleMapView fx:id="mapView" prefHeight="472.0" prefWidth="489.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                        <Button fx:id="fxBtnInTabRefreshMap" mnemonicParsing="false" onAction="#btnRefreshMap" text="Обновить" />
-                        <AnchorPane fx:id="fxAPanMsgTop" minHeight="0.0" minWidth="0.0" prefHeight="501.0" prefWidth="415.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="26.0">
+                        <Button fx:id="fxBtnInTabRefreshMap" mnemonicParsing="false" onAction="#btnRefreshMap" prefHeight="25.0" prefWidth="104.0" text="ОБНОВИТЬ" AnchorPane.rightAnchor="0.0" />
+                        <AnchorPane fx:id="fxAPanMsgTop" minHeight="0.0" minWidth="0.0" prefHeight="501.0" prefWidth="415.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <Label fx:id="fxLbSelectedUser" contentDisplay="TOP" prefHeight="20.0" prefWidth="138.0" text="Выберите судно" textAlignment="CENTER" textFill="#f51212" visible="false" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="145.0" AnchorPane.topAnchor="0.0" />
                               <Hyperlink fx:id="fxHlinkDoc" disable="true" prefHeight="23.0" prefWidth="135.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="0.0" />
                               <TextArea fx:id="mymsg" prefHeight="50.0" prefWidth="250.0" visible="false" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="170.0" />
-                              <TextArea fx:id="taOutMsg" layoutX="5.0" layoutY="342.0" prefHeight="130.0" prefWidth="405.0" AnchorPane.bottomAnchor="94.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-                              <Button fx:id="fxBtnSendMsg" layoutX="5.0" layoutY="417.0" mnemonicParsing="false" onAction="#handleSendMsg" prefHeight="20.0" prefWidth="97.0" text="Отправить текстовое ообщение" textAlignment="CENTER" textFill="GREEN" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+                              <TextArea fx:id="taOutMsg" layoutX="5.0" layoutY="342.0" prefHeight="130.0" prefWidth="405.0" wrapText="true" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+                              <Button fx:id="fxBtnSendMsg" layoutX="5.0" layoutY="417.0" mnemonicParsing="false" onAction="#handleSendMsg" prefHeight="20.0" prefWidth="97.0" text="Отправить текстовое ообщение" textAlignment="CENTER" textFill="GREEN" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+                                 <font>
+                                    <Font name="System Bold Italic" size="14.0" />
+                                 </font></Button>
                               <Button fx:id="fxBtnCkearMessages" layoutX="5.0" layoutY="477.0" mnemonicParsing="false" onAction="#btnClearMessages" text="Отправить сообщение всему флоту" textFill="GREEN" visible="false" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="477.0" />
-                              <Button layoutX="5.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnLoadFileToMsg" prefHeight="20.0" prefWidth="83.0" text="Прикрепить и отправить файл" textFill="BLUE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-                              <ListView fx:id="fxListUserViewOfMsg" layoutY="4.0" maxHeight="313.0" maxWidth="-Infinity" minHeight="150.0" minWidth="-Infinity" prefHeight="264.0" prefWidth="405.0" AnchorPane.bottomAnchor="233.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                              <Button layoutX="5.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnLoadFileToMsg" prefHeight="20.0" prefWidth="83.0" text="Прикрепить и отправить файл" textFill="BLUE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font></Button>
+                              <ListView fx:id="fxListUserViewOfMsg" layoutY="4.0" maxHeight="313.0" maxWidth="-Infinity" minHeight="150.0" minWidth="-Infinity" prefHeight="264.0" prefWidth="405.0" AnchorPane.bottomAnchor="240.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
                            </children>
                         </AnchorPane>
    </children>
